<resources>
    <string name="app_name">Todo Application</string>
    <string name="todo_title_hint">Todo Title</string>
    <string name="todo_description_hint">Some description</string>
    <string name="search_todo_hint">Search Todos</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password_input_hint">Password</string>
    <string name="username_input_hint">Username</string>
    <string name="sign_in_btn_hint">Sign In</string>
    <string name="full_name_input_hint">Full Name</string>
    <string name="create_account_btn_hint">Create Account</string>
    <string name="register_redirect_text">Not registered? Register here</string>
    <string name="login_redirect_text">Already got an account? Log In</string>
    <string name="greeting">Welcome back, </string>
    <string name="log_out_btn_hint">Log Out</string>
    <string name="todo_title_placeholder">Todo title Placeholder</string>
    <string name="delete_entry_btn_hint">Delete Entry</string>
    <string name="new_todo_action_title">New Todo</string>
    <string name="splash_screen_tag">Keep track of whats important</string>
    <string name="no_data_title">Nothing to Show</string>
    <string name="no_data_subtitle">Saved todos will eventually show up here. \n Go try some!</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="category_image_image_desc">category_image</string>
    <string name="delete_dialog_box_title">Are you sure you want to delete this todo?</string>
    <string name="yes_dialog_option">Yes</string>
    <string name="no_dialog_option">No</string>
    <string name="collaborator_username_hint">Collaborator Username (Optional)</string>
    <string name="collaborator_label">Collaborator:</string>
</resources>